; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_util.c_libzfs_run_process_get_stdout_nopath.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_util.c_libzfs_run_process_get_stdout_nopath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NO_DEFAULT_PATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libzfs_run_process_get_stdout_nopath(i8* %0, i8** %1, i8** %2, i8*** %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8***, align 8
  %10 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i8*** %3, i8**** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8**, i8*** %7, align 8
  %13 = load i8**, i8*** %8, align 8
  %14 = load i32, i32* @NO_DEFAULT_PATH, align 4
  %15 = load i8***, i8**** %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @libzfs_run_process_impl(i8* %11, i8** %12, i8** %13, i32 %14, i8*** %15, i32* %16)
  ret i32 %17
}

declare dso_local i32 @libzfs_run_process_impl(i8*, i8**, i8**, i32, i8***, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
